fixed chat message spacing

--- a/src/sass/tribe.scss
+++ b/src/sass/tribe.scss
@@ -314,7 +314,7 @@
       overflow-y: scroll;
       .systemMessage {
         color: var(--sub-color);
-        margin-top: 0.5rem;
+        margin-top: 0.25rem;
         // margin-bottom: 0.15rem;
       }
 
